gitops-repo/targeting-service/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  labels:
    app: targeting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      containers:
        - name: targeting-service
          image: 343770067934.dkr.ecr.us-east-1.amazonaws.com/fiap/targeting-service:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
