gitops-repo/targeting-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  labels:
    app: targeting-service
spec:
  type: ClusterIP
  selector:
    app: targeting-service
  ports:
    - port: 8003
      targetPort: 8003
      protocol: TCP
